# taller-tp-final

./: CMakeLists.txt  Makefile  Manual_usuario.md  Music.cpp  Music.h  README.md  Sound.cpp  Sound.h  install.sh  main.cpp  map1.json
client/: Action.cpp  Action.h  Animation.cpp  Animation.h  AnimationIdle.cpp  AnimationIdle.h  AnimationWalkRight.cpp  AnimationWalkRight.h  AssetsLoader.cpp  AssetsLoader.h  ClassTypeSelector.cpp  ClassTypeSelector.h  Client.cpp  Client.h  Clock.cpp  Clock.h  Command.h  CommandsQueue.cpp  CommandsQueue.h  Communicator.cpp  Communicator.h  Configuration.cpp  Configuration.h  Constants.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityFactory.cpp  EntityFactory.h  EventHandler.cpp  EventHandler.h  GameEntity.cpp  GameEntity.h  GameEntityContainer.cpp  GameEntityContainer.h  GameInventory.h  GameInvetory.cpp  (+68 more)
common/: Clock.cpp  Clock.h
informes/: Manual_usuario.md  documentacion_tecnica.md  manual_proyecto.md
server/: Character.cpp  Character.h  Command.cpp  Config.cpp  Config.h  Creature.cpp  Creature.h  Entity.cpp  Entity.h  Event.h  EventManager.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Map.cpp  Map.h  Player.cpp  Player.h  Server.cpp  Server.h  Thread.cpp  Thread.h  World.cpp  World.h  config.json  main.cpp
src/: AssetsLoader.cpp  Client.cpp  Client.h  Clock.cpp  Clock.h  Configuration.cpp  Configuration.h  Constants.h  Effect.h  Entity.cpp  EntityContainer.cpp  EntityFactory.cpp  GameEntityContainer.h  GameInventory.h  GameMap.cpp  GameMap.h  IdStack.h  Inventory.cpp  Inventory.h  Item.cpp  (+16 more)
(+223 files in other folders)
